--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         Hi there!
     </title>
     <body>
-        <h1>Hello World!</h1>
+        <h1 style="color: blue;">Hello World!</h1>
         <h2>Welcome</h2>
     </body>
 </html>
