--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,13 @@
     <title>
         Hi there!
     </title>
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
     <body>
-        <h1 style="color: blue;">Hello World!</h1>
+        <h1>Hello World!</h1>
         <h2>Welcome</h2>
     </body>
 </html>
